Criada conexão e controle de produto

--- a/MDN/MDN/appsettings.json
+++ b/MDN/MDN/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MDN-3B19F97C-4F2C-4448-9499-2EA0D1C52887;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnectionString": "Server=(CTSDCAPLNT0150)\\SQL7562DES01;Database=SISGTS;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnectionString": "Server=CTSDCAPLNT0150\\SQL7562DES01;Database=SISGTS2;User=usr_appnet;Password=1234renan;Trusted_Connection=False;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
