--- a/MDN/MDN/appsettings.json
+++ b/MDN/MDN/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=CTSDCAPLNT0150\\SQL7562DES01;Database=SISMDN;User=usr_appnet;Password=1234renan;Trusted_Connection=False;MultipleActiveResultSets=true"
-     "DefaultConnection": "Server=RENAN-PC\\SQLEXPRESS;Database=SISMDN;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=CTSDCAPLNT0150\\SQL7562DES01;Database=SISMDN;User=usr_appnet;Password=1234renan;Trusted_Connection=False;MultipleActiveResultSets=true"
+     //"DefaultConnection": "Server=RENAN-PC\\SQLEXPRESS;Database=SISMDN;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -12,6 +12,5 @@
   "Authentication": {
     "Facebook:AppId": "518446818905569",
     "Facebook:AppSecret": "85fbc4e405cf257eca21efca4ecf6b85"
-
   }
 }
